# agent-envelope

./: CHANGELOG.md  README.md  pyproject.toml
agent_envelope/: __init__.py  cli.py  dataflow.py  envelope.py  mcpfw.py  scoring.py  session.py  tracker.py  workflows.py
envelopes/: coding-agent.yaml  support-agent.yaml
tests/: test_mcpfw.py  test_phase1.py  test_phase2.py
